# yt-scraper-proxy

./: .env.example  .gitignore  .pre-commit-config.yaml  Aptfile  Dockerfile  Procfile  README.md  app.py  app.yaml  apt.yml  browser_utils.py  docker-compose.yml  gunicorn.conf.py  gunicorn_config.py  lint.sh  main.py  pyproject.toml  requirements.txt  utils.py  youtube_extractor.py
.github/workflows/: lints.yml
deploy_scripts/: deploy-to-cr.sh  deploy_cloudbuild_cr.yaml  full_deploy.sh  push-to-gcp.sh  push_container_to_gcp.yaml
